projects img height fixed on mobile

--- a/src/sass/components/_projectCard.scss
+++ b/src/sass/components/_projectCard.scss
@@ -181,8 +181,7 @@
 
 .projectsHomeCard__img-content {
     width: 100%;
-    height: 60vh;
-    min-height: 320px;
+    min-height: 280px;
     box-sizing: border-box;
     border-radius: $s16;
     border-bottom: $s8 solid $colorPink;
@@ -195,6 +194,7 @@
     }
 
     @include for-phone-only {
+        height: 30vh;
         border: none;
         padding: 0;
         border-radius: 16px 16px 0px 0px;
@@ -203,14 +203,17 @@
     @include for-tablet-portrait-up {
         border-left: 0;
         border-radius: $s16 $s16 0 0;
+        height: 60vh;
     }
 
     @include for-tablet-landscape-up {
+        height: 60vh;
         border-radius: $s16;
         border-left: $s8 solid $colorPink;
     }
 
     @include for-desktop-up {
+        height: 60vh;
         min-width: 400px;
     }
     
